--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RECIPE</string>
+    <string name="app_name">RECIPE HUB</string>
     <string name="app_logo_description">Recipe App Logo</string>
     <string name="welcome_tagline">Discover Your Culinary Journey</string>
     <string name="welcome_description">Explore thousands of recipes, create your own masterpieces, and share with fellow food lovers</string>
